{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 21,
  "lineage": "08a011bf-f4b5-e31e-c074-e889a8ac11a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c3794f4df590633",
            "arn": "arn:aws:ec2:ap-northeast-2:654654611665:elastic-ip/eipalloc-04c3794f4df590633",
            "association_id": "eipassoc-09cdec7c7710424b8",
            "domain": "vpc",
            "id": "eipalloc-04c3794f4df590633",
            "instance": "i-09d095a2cb04833cb",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0bb5c954cefb18d78",
            "private_dns": "ip-10-0-1-157.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-3-39-85-99.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.85.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eip"
            },
            "tags_all": {
              "Name": "my-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my_instance",
            "aws_key_pair.my_key",
            "aws_security_group.ssh",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024ea438ab0376a47",
            "arn": "arn:aws:ec2:ap-northeast-2:654654611665:instance/i-09d095a2cb04833cb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d095a2cb04833cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb5c954cefb18d78",
            "private_dns": "ip-10-0-1-157.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.157",
            "public_ip": "3.39.85.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a58f6ea525908ecf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d07bd3c893240fc",
            "tags": {
              "Name": "my-ec2-instance"
            },
            "tags_all": {
              "Name": "my-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4cdedd8fc1c224c"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.ssh",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654611665:internet-gateway/igw-0e30c4e3eb6fef600",
            "id": "igw-0e30c4e3eb6fef600",
            "owner_id": "654654611665",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-02d8cc72afe1a8b3a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654611665:route-table/rtb-091eb26a8f9cbdcfe",
            "id": "rtb-091eb26a8f9cbdcfe",
            "owner_id": "654654611665",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e30c4e3eb6fef600",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table"
            },
            "tags_all": {
              "Name": "my-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d8cc72afe1a8b3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940064cfc1a11068",
            "route_table_id": "rtb-091eb26a8f9cbdcfe",
            "subnet_id": "subnet-00d07bd3c893240fc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654611665:security-group/sg-0b4cdedd8fc1c224c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4cdedd8fc1c224c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250225051156613200000001",
            "name_prefix": "terraform-",
            "owner_id": "654654611665",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-ssh-sg"
            },
            "tags_all": {
              "Name": "my-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d8cc72afe1a8b3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654611665:subnet/subnet-00d07bd3c893240fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d07bd3c893240fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654611665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-public-subnet-1"
            },
            "vpc_id": "vpc-02d8cc72afe1a8b3a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654611665:vpc/vpc-02d8cc72afe1a8b3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010a8e604bee6f428",
            "default_route_table_id": "rtb-0c55e8cf1e6e6a2b3",
            "default_security_group_id": "sg-068dff5e5c825ece8",
            "dhcp_options_id": "dopt-0f1936d6d9b6ba383",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d8cc72afe1a8b3a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c55e8cf1e6e6a2b3",
            "owner_id": "654654611665",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}